# personal_assistant

./: .env  README.md  pyproject.toml
core/: .dockerignore  .env  .env.template  .gitignore  Dockerfile  Procfile  fly.toml  pyproject.toml  requirements.txt
core/addressbook/: forms.py  models.py  urls.py  views.py
core/addressbook/migrations/: 0001_initial.py
core/addressbook/static/addressbook/: style.css
core/addressbook/templates/addressbook/: add_contact.html  base.html  birthday_form.html  birthday_list.html  contact_list.html  edit_contact.html  home.html  search_contact.html
core/cloud/: admin.py  apps.py  models.py  urls.py  views.py
core/cloud/migrations/: 0001_initial.py  0002_mediafile_file_type_alter_mediafile_file.py
core/cloud/templates/cloud/: base.html  file_list.html  upload_file.html
core/core/: settings.py  urls.py
core/custom_auth/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
core/custom_auth/migrations/: 0001_initial.py  0002_profile_address.py  0003_alter_profile_avatar.py  0004_alter_profile_address_alter_profile_avatar.py
core/custom_auth/static/custom_auth/: style.css
core/custom_auth/templates/custom_auth/: base.html  index.html  index_style.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  (+2 more)
core/notes/: apps.py  forms.py  models.py  urls.py  views.py
core/notes/migrations/: 0001_initial.py  0002_alter_note_tags.py  0003_alter_note_tags.py
core/notes/templates/: note_confirm_delete.html  note_detail.html  note_form.html  note_list.html  note_search.html
(+129 files in other folders)
