[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = ""
authors = ["<valentino4ka2009@gmail.com>, <o_serg@ukr.net>, <uliadiakiv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
